force-app/main/default/objects/xAL_Locality__mdt/xAL_Locality__mdt.object-meta.xml
<CustomObject>
    <label>xAL Locality</label>
    <pluralLabel>xAL Localities</pluralLabel>
</CustomObject>