force-app/main/default/objects/xAL_Locality__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
                <default>true</default>
                <label>City</label>
            </value>
            <value>
                <fullName>Suburb</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>