force-app/main/default/objects/xAL_Locality__mdt/fields/xAL_AdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>xAL_AdministrativeArea__c</fullName>
    <label>xAL AdministrativeArea</label>
    <referenceTo>xAL_AdministrativeArea__mdt</referenceTo>
    <relationshipLabel>xAL Localities</relationshipLabel>
    <relationshipName>xAL_Localities</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>