force-app/main/default/objects/xAL_Locality__mdt/fields/xAL_ParentLocality__c.field-meta.xml
<CustomField>
    <fullName>xAL_ParentLocality__c</fullName>
    <description>DeveloperName of parent locality metadata record</description>
    <label>xAL ParentLocality</label>
    <length>40</length>
    <type>Text</type>
</CustomField>