force-app/main/default/objects/xAL_Locality__mdt/fields/xAL_SubAdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>xAL_SubAdministrativeArea__c</fullName>
    <label>xAL SubAdministrativeArea</label>
    <referenceTo>xAL_SubAdministrativeAreas__mdt</referenceTo>
    <relationshipLabel>xAL Localities</relationshipLabel>
    <relationshipName>xAL_Localities</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>